WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73427
[Gtk] Links should be Tab-focusable by default
https://bugs.webkit.org/show_bug.cgi?id=73427
Summary
[Gtk] Links should be Tab-focusable by default
Joanmarie Diggs
Reported
2011-11-30 04:06:31 PST
WK2 has a setting to enable/disable the Tab-focusability of links. As discussed via IRC, this should be enabled by default. < xc0ffee> joanie: probably you need to set this property to true, if you want to navigate to links pressing tab.. < xc0ffee> joanie: its false by default.. [...] < xc0ffee> joanie: we can change it to true, if required.. Martin? < joanie> in other words, I think the "normal/expected" behavior is that links are tab-focusable < msanchez> joanie: agreed, at least in the gtk port that was the expected behaviour so far, so I would keep it [...] < msanchez> other option is just to make sure that browsers using wk2 take care of enabling this feature, but that would not be consistent with what browsers WK2 do < msanchez> mrobinson, xc0ffee: what do you think? < joanie> so what shipping browsers lack tab-focusable links? < xc0ffee> joanie: msanchez: makes sense to turn this property true by default for me.. <+mrobinson> joanie: No, it's a switch that they make sure to flip. [...] <+mrobinson> xc0ffee: Seems reasonable to add it to WebKitSettings and have it flipped on by default.
Attachments
Patch
(1.65 KB, patch)
2011-11-30 04:36 PST
,
Mario Sanchez Prada
no flags
Details
Formatted Diff
Diff
Patch
(2.77 KB, patch)
2011-11-30 06:08 PST
,
Mario Sanchez Prada
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2011-11-30 04:36:37 PST
Created
attachment 117168
[details]
Patch
WebKit Review Bot
Comment 2
2011-11-30 04:52:54 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Martin Robinson
Comment 3
2011-11-30 05:39:01 PST
Comment on
attachment 117168
[details]
Patch You need to update the unit test as well.
Mario Sanchez Prada
Comment 4
2011-11-30 06:08:53 PST
Created
attachment 117181
[details]
Patch
Mario Sanchez Prada
Comment 5
2011-11-30 06:09:51 PST
(In reply to
comment #3
)
> (From update of
attachment 117168
[details]
) > You need to update the unit test as well.
Done. Please feel free to set cq+ too if it's ok this time :-) Thanks
WebKit Review Bot
Comment 6
2011-11-30 07:32:19 PST
Comment on
attachment 117181
[details]
Patch Clearing flags on attachment: 117181 Committed
r101514
: <
http://trac.webkit.org/changeset/101514
>
WebKit Review Bot
Comment 7
2011-11-30 07:32:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug