[Gtk] Links should be Tab-focusable by default https://bugs.webkit.org/show_bug.cgi?id=73427

Patch by Mario Sanchez Prada <msanchez@igalia.com> on 2011-11-30
Reviewed by Martin Robinson.

* UIProcess/API/gtk/WebKitSettings.cpp:
(webkit_settings_class_init): Switch the default value for
'enable-tabs-to-links' property from FALSE to TRUE.
* UIProcess/API/gtk/tests/TestWebKitSettings.cpp:
(testWebKitSettings): Updated unit test.

Canonical link: https://commits.webkit.org/89995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101514 268f45cc-cd09-0410-ab3c-d52691b4dbfc