Source/WebKit2/UIProcess/API/gtk/tests/TestWebKitSettings.cpp
@@ -169,9 +169,9 @@ static void testWebKitSettings(Test*, gconstpointer)
     webkit_settings_set_enable_resizable_text_areas(settings, FALSE);
     g_assert(!webkit_settings_get_enable_resizable_text_areas(settings));
 
-    g_assert(!webkit_settings_get_enable_tabs_to_links(settings));
-    webkit_settings_set_enable_tabs_to_links(settings, TRUE);
     g_assert(webkit_settings_get_enable_tabs_to_links(settings));
+    webkit_settings_set_enable_tabs_to_links(settings, FALSE);
+    g_assert(!webkit_settings_get_enable_tabs_to_links(settings));
 
     // Caret browsing is disabled by default.
     g_assert(!webkit_settings_get_enable_caret_browsing(settings));
